--- a/css/modal.css
+++ b/css/modal.css
@@ -19,10 +19,13 @@
 .modal {
   background: white;
   padding: 40px;
+  width: 80vw;
+  max-width: 600px;
   border: 10px solid #fb5;
   box-shadow: 0 0 0 10px white;
   position: relative;
   min-width: 300px;
+  box-sizing: border-box;
 }
 
 @keyframes modal {
@@ -43,11 +46,9 @@
   border-radius: 50%;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
   position: absolute;
+  background: #e54 url("../img/fechar.svg") no-repeat center center;
   top: -30px;
   right: -30px;
-  font-size: 1.2rem;
-
-  font-family: "IBM Plex Mono", monospace;
 }
 
 .fechar:hover {
@@ -65,6 +66,8 @@
 .modal input {
   width: 100%;
   padding: 0.7rem 0.5rem;
+  border: 2px solid #222;
+  border-radius: 0px;
   box-sizing: border-box;
 }
 
